# car-scraping

./: README.md  car_scraper_plan.txt  config.py  pyproject.toml  requirements.txt  run_all.py  scrape_cargurus.py  scrape_carscom.py  scrape_craigslist.py
data/: carscom_results.csv  craigslist_results.csv  merge_results.py
tests/: conftest.py  test_live_cargurus.py  test_live_carscom.py  test_live_craigslist.py  test_merge_results.py  test_scrape_cargurus.py  test_scrape_carscom.py  test_scrape_craigslist.py
tests/cassettes/test_live_cargurus/: cargurus_one_page.yaml
tests/cassettes/test_live_carscom/: carscom_one_page.yaml
tests/cassettes/test_live_craigslist/: craigslist_one_page.yaml
tests/fixtures/: README  cargurus_page1.html  carscom_page1.html  craigslist_page1.html
utils/: console.py  http_client.py  throttle.py  url.py
